<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clothes"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginHorizontal="@dimen/space_margin_meduim"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_margin_meduim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_loc_temp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="SpeakableTextPresentCheck"
        tools:itemCount="3" />


    <TextView
        android:id="@+id/textView_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        style="@style/TextTitle"
        android:textSize="40sp"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="@dimen/text_meduim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_wind"
        style="@style/subCard"
        app:cardCornerRadius="@dimen/space_margin_small"
        app:layout_constraintBottom_toTopOf="@+id/cardView_cloud"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_wind_speed"
                android:layout_width="@dimen/space_margin_large"
                android:layout_height="@dimen/space_margin_large"
                android:layout_marginStart="@dimen/space_margin_meduim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_wind"/>
            <TextView
                android:id="@+id/textView_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                style="@style/TextTitle"
                android:textSize="@dimen/text_E_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_wind_speed"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_cloud"
        style="@style/subCard"
        app:cardCornerRadius="@dimen/space_margin_small"
        app:layout_constraintBottom_toTopOf="@+id/cardView_hum"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView_cloud_coverage"
                android:layout_width="@dimen/space_margin_large"
                android:layout_height="@dimen/space_margin_large"
                android:layout_marginStart="@dimen/space_margin_meduim"
                android:src="@drawable/icon_cloud"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_cloud_coverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                style="@style/TextTitle"
                android:textSize="@dimen/text_E_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_cloud_coverage"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_hum"
        style="@style/subCard"
        app:cardCornerRadius="@dimen/space_margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_humidty"
                android:layout_width="@dimen/space_margin_large"
                android:layout_height="@dimen/space_margin_large"
                android:src="@drawable/icon_humidity"
                android:layout_marginStart="@dimen/space_margin_meduim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                style="@style/TextTitle"
                android:textSize="@dimen/text_E_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_humidty"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_loc_temp"
        style="@style/mainCard"
        app:cardElevation="@dimen/no_elevation"
        android:layout_marginHorizontal="@dimen/space_margin_meduim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-32dp"
                style="@style/TextTitle"
                android:text="@string/cairo"
                android:textSize="@dimen/text_E_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-32dp"
                android:text="@string/egypts"
                android:textSize="@dimen/text_meduim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5178" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_margin_small"
                android:text="@string/date"
                style="@style/TextTitle"
                android:textSize="@dimen/text_large"
                android:layout_marginStart="@dimen/space_margin_E_small"
                app:layout_constraintStart_toEndOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_margin_small"
                android:text="@string/time"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city"
                style="@style/TextTitle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rain_image_large_card"
                android:layout_width="@dimen/space_margin_large"
                android:layout_height="@dimen/space_margin_large"
                android:layout_marginStart="@dimen/space_margin_E_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/country"
                app:layout_constraintTop_toTopOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:ignore="SpeakableTextPresentCheck"
                tools:itemCount="1" />


            <TextView
                android:id="@+id/textView_weather_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weather_condition_today"
                style="@style/TextTitle"
                android:textSize="@dimen/text_meduim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>